--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* Estilos para foto de perfil */
 .foto img {
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 250px;
     object-fit: cover;
     border: 4px solid #ccc;
     transition: transform 0.3s;
@@ -35,12 +35,14 @@
     font-size: 1.1rem;
     color: #333;
 }
+.formacoes{
+    display: inline;
 
+}
 /* Ajustes gerais */
 body {
     font-family: 'Roboto', sans-serif;
     background-color: #f8f9fa;
 }
-
 
 
